aggiunta frase cap 1

--- a/capitoli/capitolo-1.tex
+++ b/capitoli/capitolo-1.tex
@@ -172,7 +172,7 @@ Per poter utilizzare il programma è necessario:
 	\begin{itemize}
 		\item \begin{verbatim}
 		python main.py
-		\end{verbatim}inizia l'esecuzione del programma, guidando l'utente nella scelta della difficoltà del problema e in che modo risolverlo. Le possibili difficoltà sono 5 (da 0 a 4) e di complessità crescente. I metodi di risoluzione sono quattro, tre dei quali con una variante ...
+		\end{verbatim}inizia l'esecuzione del programma, guidando l'utente nella scelta della difficoltà del problema e in che modo risolverlo. Le possibili difficoltà sono 5 (da 0 a 4) e di complessità crescente. I metodi di risoluzione sono quattro, ognuno dei quali permette di scegliere se utilizzare tale metodo con le migliorie ideate e implementate da noi (descritte in \ref{migliorie}) o meno; 
 		\item \begin{verbatim}
 		sh Test/scriptTest.sh
 		\end{verbatim}esegue automaticamente una serie di esempi di problemi con vari metodi di risoluzione, tracciando i risultati ottenuti nel file \texttt{Test/testResult.txt}. 
