aggiunti risultati dfs lv4

--- a/capitoli/capitolo-3.tex
+++ b/capitoli/capitolo-3.tex
@@ -164,7 +164,7 @@ La configurazione iniziale del livello 4 è mostrata in figura \ref{lev4}. Tutte
 	\begin{tabular}{|l||*{4}{c|}}\hline 
 		\backslashbox{Miglioria}{Solver} 
 		&\makebox{DFS}&\makebox{Backtracking}&\makebox{Recursive Backtracking}	&\makebox{MinConflicts}\\ \hline 
-		Sì& ()&\textcolor{ForestGreen}{1,0781 (184)}&13,126 (2640)&18,794 (3.416,8) \\ \hline 
+		Sì&\textcolor{red}{228,63 (77.582)}&\textcolor{ForestGreen}{1,0781 (184)}&13,126 (2640)&18,794 (3.416,8) \\ \hline 
 		No& ()&3,8761 (4002)&23,131 (23971)&2,94 (458,78)  \\ \hline 
 	\end{tabular} 
 	\caption{Tempi livello 4}
