--- a/capitoli/capitolo-1.tex
+++ b/capitoli/capitolo-1.tex
@@ -26,21 +26,21 @@ Le forme totali sono 11, ognuna con una propria struttura diversa dalle altre, e
 	\begin{minipage}{3.5cm}
 		\centering
 		\includegraphics[scale=0.30]{immagini/p}
-		\caption{}
+		\caption{Rossa}
 		\label{p}
 	\end{minipage}
 	\ \hspace{2mm} \hspace{3mm} \
 	\begin{minipage}{3.5cm}
 		\centering
 		\includegraphics[scale=0.30]{immagini/z}
-		\caption{}
+		\caption{Marrone}
 		\label{z}
 	\end{minipage}
 	\ \hspace{2mm} \hspace{3mm} \
 	\begin{minipage}{3.5cm}
 		\centering
 		\includegraphics[scale=0.30]{immagini/smallv}
-		\caption{}
+		\caption{Arancione}
 		\label{smallv}
 	\end{minipage}
 \end{figure}
@@ -50,21 +50,21 @@ Le forme totali sono 11, ognuna con una propria struttura diversa dalle altre, e
 	\begin{minipage}{3.5cm}
 		\centering
 		\includegraphics[scale=0.30]{immagini/bigz}
-		\caption{}
+		\caption{Verde scuro}
 		\label{bigz}
 	\end{minipage}
 	\ \hspace{2mm} \hspace{3mm} \
 	\begin{minipage}{3.5cm}
 		\centering
 		\includegraphics[scale=0.25]{immagini/yellow}
-		\caption{}
+		\caption{Gialla}
 		\label{c}
 	\end{minipage}
 	\ \hspace{2mm} \hspace{3mm} \
 	\begin{minipage}{3.5cm}
 		\centering
 		\includegraphics[scale=0.25]{immagini/Y}
-		\caption{}
+		\caption{Rosa}
 		\label{y}
 	\end{minipage}
 \end{figure}
@@ -74,21 +74,21 @@ Le forme totali sono 11, ognuna con una propria struttura diversa dalle altre, e
 	\begin{minipage}{3.5cm}
 		\centering
 		\includegraphics[scale=0.30]{immagini/i}
-		\caption{}
+		\caption{Viola}
 		\label{i}
 	\end{minipage}
 	\ \hspace{2mm} \hspace{3mm} \
 	\begin{minipage}{3.5cm}
 		\centering
 		\includegraphics[scale=0.25]{immagini/T}
-		\caption{}
+		\caption{Verde chiaro}
 		\label{t}
 	\end{minipage}
 	\ \hspace{2mm} \hspace{3mm} \
 	\begin{minipage}{3.5cm}
 		\centering
 		\includegraphics[scale=0.25]{immagini/w}
-		\caption{}
+		\caption{Violetto}
 		\label{w}
 	\end{minipage}
 \end{figure}
@@ -98,14 +98,14 @@ Le forme totali sono 11, ognuna con una propria struttura diversa dalle altre, e
 	\begin{minipage}{3.5cm}
 		\centering
 		\includegraphics[scale=0.25]{immagini/v}
-		\caption{}
+		\caption{Azzurra}
 		\label{v}
 	\end{minipage}
 	\ \hspace{2mm} \hspace{3mm} \
 	\begin{minipage}{3.5cm}
 		\centering
 		\includegraphics[scale=0.30]{immagini/L}
-		\caption{}
+		\caption{Blu}
 		\label{l}
 	\end{minipage}
 \end{figure}
